[gd_scene load_steps=30 format=2]

[ext_resource path="res://sprites/player/Player_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PlayerController.gd" type="Script" id=2]
[ext_resource path="res://sprites/Death.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.5, 8 )

[sub_resource type="Animation" id=3]
resource_name = "Die"
length = 1.35
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Destroy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}

[sub_resource type="Animation" id=6]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 2, 2, 2, 2, 2 ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 20 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Teleport"
length = 1.9
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Head:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.55 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=9]
length = 0.6
loop = true
step = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 8 ]
}

[sub_resource type="Animation" id=10]
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 12, 13, 14, 14, 13 ]
}

[sub_resource type="Animation" id=11]
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 2, 1 ]
}

[sub_resource type="Animation" id=12]
length = 0.6
loop = true
step = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 18, 20 ]
}

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "IdleUp"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "IdleRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=17]
blend_point_0/node = SubResource( 13 )
blend_point_0/pos = Vector2( 0, 0.8 )
blend_point_1/node = SubResource( 14 )
blend_point_1/pos = Vector2( 0, -0.6 )
blend_point_2/node = SubResource( 15 )
blend_point_2/pos = Vector2( -0.9, 0 )
blend_point_3/node = SubResource( 16 )
blend_point_3/pos = Vector2( 0.9, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "WalkRight"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "WalkLeft"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "WalkUp"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "WalkDown"

[sub_resource type="AnimationNodeBlendSpace2D" id=22]
auto_triangles = false
blend_point_0/node = SubResource( 18 )
blend_point_0/pos = Vector2( 0.9, 0 )
blend_point_1/node = SubResource( 19 )
blend_point_1/pos = Vector2( -0.9, 0 )
blend_point_2/node = SubResource( 20 )
blend_point_2/pos = Vector2( 0, -0.6 )
blend_point_3/node = SubResource( 21 )
blend_point_3/pos = Vector2( 0, 0.8 )
triangles = PoolIntArray( 0, 2, 3, 1, 2, 3 )
min_space = Vector2( -1.05, -1 )
max_space = Vector2( 1.02, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachine" id=25]
states/Idle/node = SubResource( 17 )
states/Idle/position = Vector2( 410, 144 )
states/Walk/node = SubResource( 22 )
states/Walk/position = Vector2( 571, 144 )
transitions = [ "Idle", "Walk", SubResource( 23 ), "Walk", "Idle", SubResource( 24 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=26]

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_mask = 11
script = ExtResource( 2 )

[node name="Head" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 6
vframes = 8
frame = 2

[node name="Destroy" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
hframes = 9
frame = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.111359, 0 )
shape = SubResource( 1 )

[node name="PlayerHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitbox"]
scale = Vector2( 1.1, 1.1 )
shape = SubResource( 2 )

[node name="PlayerCenter" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCenter"]
scale = Vector2( 1.1, 1.1 )
shape = SubResource( 2 )

[node name="BulletRotate" type="KinematicBody2D" parent="."]

[node name="BulletOrigin" type="Position2D" parent="BulletRotate"]
position = Vector2( 8.24081, -0.222725 )
scale = Vector2( 0.5, 0.5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 3 )
anims/IdleDown = SubResource( 4 )
anims/IdleLeft = SubResource( 5 )
anims/IdleRight = SubResource( 6 )
anims/IdleUp = SubResource( 7 )
anims/Teleport = SubResource( 8 )
anims/WalkDown = SubResource( 9 )
anims/WalkLeft = SubResource( 10 )
anims/WalkRight = SubResource( 11 )
anims/WalkUp = SubResource( 12 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 25 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 26 )
parameters/Idle/blend_position = Vector2( 0.998454, -0.0103092 )
parameters/Walk/blend_position = Vector2( -0.000602722, 0.803468 )

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.3, 1.3 )

[node name="CoinSound" type="AudioStreamPlayer2D" parent="."]

[node name="BatterySound" type="AudioStreamPlayer2D" parent="."]

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
volume_db = 15.0

[node name="DashSound" type="AudioStreamPlayer2D" parent="."]
volume_db = -5.0

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="InvincibilityFrame" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[connection signal="area_entered" from="PlayerCenter" to="." method="_on_PlayerCenter_area_entered"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_DashCooldown_timeout"]
[connection signal="timeout" from="InvincibilityFrame" to="." method="_on_InvincibilityFrame_timeout"]
